cmake_minimum_required(VERSION 3.10)
project(COMP7402_Assignment5)

# Include directories
set(INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
set(SOURCE_DIR  "${CMAKE_CURRENT_SOURCE_DIR}/src")
#set(OPENSSL_USE_STATIC_LIBS TRUE)


# Find all source files in the src directory
file(GLOB_RECURSE PROJECT_FILES
        "${INCLUDE_DIR}/*.h"
        "${SOURCE_DIR}/*.cpp"
        "${SOURCE_DIR}/*.c"
        )

add_executable(${PROJECT_NAME} ${PROJECT_FILES})

target_include_directories(${PROJECT_NAME} PRIVATE ${INCLUDE_DIR})
#target_link_libraries(${PROJECT_NAME} PRIVATE ssl crypto)
target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)

